# pyi18next

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: get-started.md  index.md  install.md
docs/usage/: load.md
pyi18next/: functions.py  i18next.py  translate.py  utility.py
pyi18next/backends/: fs.py
pyi18next/loaders/: __init__.py
tests/: test_base.py  test_translate.py
tests/sample/translation/: en.json
